# clawtrade

./: .env.example  .gitignore  Cargo.toml  DEMO_SCRIPT.md  Dockerfile  EXPANSION_PLAN.md  HACKATHON.md  LICENSE  LLAMA_SWAP_SETUP.md  PITCH.md  PLAN.md  README.md  SERVICE_CATALOG.md  SUBMISSION.md  SUBMISSION_VIDEO_SCRIPT.md  fly.toml  index.html
scripts/: agent-interaction-demo.sh  buyer-agent.sh  creator-agent.sh  demo-purchase.sh  demo-video-setup.sh  integration_test.sh  llm-showcase.sh  record-screen.sh  run-demo.sh  seed_demo.sh  tunnel.sh
skills/clawtrade-buyer/: SKILL.md
skills/clawtrade-creator/: SKILL.md
skills/clawtrade-deliverer/: SKILL.md
skills/clawtrade-reviewer/: SKILL.md
src/: agent_loop.rs  dashboard.rs  dashboard.rs.bak  db.rs  delivery.rs  hermes_bridge.rs  main.rs  monitor.rs  nvidia.rs  prompt_defense.rs  rate_limit.rs  service_catalog.rs  websocket.rs
src/api/: activity.rs  agents.rs  deliverables.rs  health.rs  hosting.rs  llm.rs  marketplace.rs  mod.rs  monitor.rs  pricing.rs  reviews.rs  services.rs  stripe.rs  templates.rs  transactions.rs
src/models/: activity_log.rs  agent.rs  deliverable.rs  mod.rs  review.rs  service.rs  transaction.rs
